// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encoding_ReplacementCharacter with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "Unicode replacement character detected, source encoding issues?",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`Encoding_ReplacementCharacter with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: Unicode replacement character detected, source encoding issues?
    at warning (lib/sax.js:#0)",
]
`;

exports[`Encoding_ReplacementCharacter with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "Unicode replacement character detected, source encoding issues?",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`Encoding_ReplacementCharacter with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: Unicode replacement character detected, source encoding issues?
    at warning (lib/sax.js:#0)",
]
`;

exports[`HTML_Doctype_UnexpectedName with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "Unexpected DOCTYPE in HTML document at position 13",
    {
      "columnNumber": 15,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`HTML_Doctype_UnexpectedName with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: Unexpected DOCTYPE in HTML document at position 13
    at warning (lib/sax.js:#42)",
]
`;

exports[`HTML_Doctype_UnexpectedName with mimeType text/xml should not be reported: reported 1`] = `[]`;

exports[`HTML_Doctype_UnexpectedSystemId with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "Unexpected doctype.systemId in HTML document at position 32",
    {
      "columnNumber": 34,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`HTML_Doctype_UnexpectedSystemId with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: Unexpected doctype.systemId in HTML document at position 32
    at warning (lib/sax.js:#45)",
]
`;

exports[`HTML_Doctype_UnexpectedSystemId with mimeType text/xml should not be reported: reported 1`] = `[]`;

exports[`SYNTAX_AttributeEqualMissingValue with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`SYNTAX_AttributeEqualMustAfterAttrName with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute equal must after attrName",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeEqualMustAfterAttrName with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute equal must after attrName
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_AttributeEqualMustAfterAttrName with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute equal must after attrName",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeEqualMustAfterAttrName with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute equal must after attrName
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_AttributeInvalidCloseChar with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute invalid close char('/')",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeInvalidCloseChar with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute invalid close char('/')
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_AttributeInvalidCloseChar with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute invalid close char('/')",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeInvalidCloseChar with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute invalid close char('/')
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute value no end '"' match",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute value no end '"' match
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute value no end '"' match",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingEndingQuote with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute value no end '"' match
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_AttributeMissingQuote with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "attribute "value" missed quot(")!",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingQuote with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "value" missed quot(")!
    at warning (lib/sax.js:#24)",
]
`;

exports[`SYNTAX_AttributeMissingQuote with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "attribute "value" missed quot(")!",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingQuote with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "value" missed quot(")!
    at warning (lib/sax.js:#24)",
]
`;

exports[`SYNTAX_AttributeMissingQuote2 with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "attribute "&" missed quot(")!!",
    {
      "columnNumber": 12,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingQuote2 with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "&" missed quot(")!!
    at warning (lib/sax.js:#27)",
]
`;

exports[`SYNTAX_AttributeMissingQuote2 with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "attribute "&" missed quot(")!!",
    {
      "columnNumber": 12,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingQuote2 with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "&" missed quot(")!!
    at warning (lib/sax.js:#27)",
]
`;

exports[`SYNTAX_AttributeMissingStartingQuote with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "attribute "attr" missed start quot(")!!",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingStartingQuote with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "attr" missed start quot(")!!
    at warning (lib/sax.js:#20)",
]
`;

exports[`SYNTAX_AttributeMissingStartingQuote with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "attribute "attr" missed start quot(")!!",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingStartingQuote with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "attr" missed start quot(")!!
    at warning (lib/sax.js:#20)",
]
`;

exports[`SYNTAX_AttributeMissingValue with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`SYNTAX_AttributeMissingValue with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "attribute "attr" missed value!! "attr" instead!!",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingValue with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "attr" missed value!! "attr" instead!!
    at warning (lib/sax.js:#25)",
]
`;

exports[`SYNTAX_AttributeMissingValue2 with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`SYNTAX_AttributeMissingValue2 with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "attribute "attr" missed value!! "attr" instead2!!",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
  [
    "warning",
    "attribute "attr2" missed value!! "attr2" instead!!",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeMissingValue2 with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute "attr" missed value!! "attr" instead2!!
    at warning (lib/sax.js:#28)",
]
`;

exports[`SYNTAX_AttributeSpaceRequired with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "attribute space is required"a"!!",
    {
      "columnNumber": 13,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeSpaceRequired with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute space is required"a"!!
    at warning (lib/sax.js:#29)",
]
`;

exports[`SYNTAX_AttributeSpaceRequired with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "attribute space is required"a"!!",
    {
      "columnNumber": 13,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeSpaceRequired with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute space is required"a"!!
    at warning (lib/sax.js:#29)",
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "attribute value must after "="",
    {
      "columnNumber": 10,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute value must after "="
    at warning (lib/sax.js:#18)",
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual with mimeType text/xml should be reported 1`] = `
[
  [
    "warning",
    "attribute value must after "="",
    {
      "columnNumber": 10,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: attribute value must after "="
    at warning (lib/sax.js:#18)",
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual_Thrown with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute value must after "="",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual_Thrown with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute value must after "="
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual_Thrown with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute value must after "="",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_AttributeValueMustAfterEqual_Thrown with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute value must after "="
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_Doctype_InternalSubset_Error with mimeType text/html should not be reported: caught 1`] = `[ParseError: doctype not terminated with > at position 12]`;

exports[`SYNTAX_Doctype_InternalSubset_Error with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "warning",
    "Unexpected DOCTYPE in HTML document at position 11",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
  [
    "fatalError",
    "doctype not terminated with > at position 12",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_Doctype_InternalSubset_MarkupDeclaration with mimeType text/html should not be reported: caught 1`] = `[ParseError: doctype not terminated with > at position 12]`;

exports[`SYNTAX_Doctype_InternalSubset_MarkupDeclaration with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "warning",
    "Unexpected DOCTYPE in HTML document at position 11",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
  [
    "fatalError",
    "doctype not terminated with > at position 12",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_Doctype_InternalSubset_MissingClosingBracket with mimeType text/html should not be reported: caught 1`] = `[ParseError: doctype not terminated with > at position 12]`;

exports[`SYNTAX_Doctype_InternalSubset_MissingClosingBracket with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "warning",
    "Unexpected DOCTYPE in HTML document at position 11",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
  [
    "fatalError",
    "doctype not terminated with > at position 12",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_Doctype_InternalSubset_PINotWellFormed with mimeType text/html should not be reported: caught 1`] = `[ParseError: doctype not terminated with > at position 12]`;

exports[`SYNTAX_Doctype_InternalSubset_PINotWellFormed with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "warning",
    "Unexpected DOCTYPE in HTML document at position 11",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
  [
    "fatalError",
    "doctype not terminated with > at position 12",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: elements closed character '/' and '>' must be connected to",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: elements closed character '/' and '>' must be connected to
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: elements closed character '/' and '>' must be connected to",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_ElementClosingNotConnected with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: elements closed character '/' and '>' must be connected to
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_ElementParseError with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute value must after "="",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_ElementParseError with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute value must after "="
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_ElementParseError with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute value must after "="",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_ElementParseError with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: attribute value must after "="
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: invalid attribute:123",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: invalid attribute:123
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: invalid attribute:123",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidAttributeName with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: invalid attribute:123
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: invalid tagName:123",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: invalid tagName:123
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: invalid tagName:123",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_InvalidTagName with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: invalid tagName:123
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_SingleRootElement_CDataOutside with mimeType text/html should not be reported: caught 1`] = `[ParseError: Not well-formed XML starting with "<!" at position 0]`;

exports[`SYNTAX_SingleRootElement_CDataOutside with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "fatalError",
    "Not well-formed XML starting with "<!" at position 0",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_SingleRootElement_ContentAfter with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "error",
    "Extra content at the end of the document",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_SingleRootElement_ContentAfter with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "Extra content at the end of the document",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_SingleRootElement_ContentAfter with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: Extra content at the end of the document
    at error (lib/sax.js:#5)",
]
`;

exports[`SYNTAX_SingleRootElement_ContentBefore with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`SYNTAX_SingleRootElement_ContentBefore with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "Unexpected content outside root element: 'textbefore'",
    {
      "columnNumber": 12,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_SingleRootElement_ContentBefore with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: Unexpected content outside root element: 'textbefore'
    at error (lib/sax.js:#6)",
]
`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "unexpected end of input",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: unexpected end of input
    at error (lib/sax.js:#23)",
]
`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/xml should not be reported: caught 1`] = `[ParseError: unclosed xml tag(s): xml]`;

exports[`SYNTAX_UnexpectedEndOfInput with mimeType text/xml should not be reported: reported 1`] = `
[
  [
    "error",
    "unexpected end of input",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
  [
    "fatalError",
    "unclosed xml tag(s): xml",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnexpectedLessThanInTagName with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: unexpected < in tag name: a",
    {
      "columnNumber": 8,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnexpectedLessThanInTagName with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: unexpected < in tag name: a
    at error (lib/sax.js:#13)",
]
`;

exports[`SYNTAX_UnexpectedLessThanInTagName with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "element parse error: Error: unexpected < in tag name: a",
    {
      "columnNumber": 8,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`SYNTAX_UnexpectedLessThanInTagName with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: element parse error: Error: unexpected < in tag name: a
    at error (lib/sax.js:#13)",
]
`;

exports[`WF_AttValue_CleanAttrVals with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_AttValue_CleanAttrVals_MissingClosingQuote with mimeType text/html should not be reported: caught 1`] = `[ParseError: Opening and ending tag mismatch: "xml" != "Label"]`;

exports[`WF_AttValue_CleanAttrVals_MissingClosingQuote with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "error",
    "element parse error: Error: attribute value no end '"' match",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
  [
    "fatalError",
    "Opening and ending tag mismatch: "xml" != "Label"",
    {
      "columnNumber": 7,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_ElementTypeMatch_Mismatch_Root with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_ElementTypeMatch_QName_HtmlTrailingRecover with mimeType text/html should be reported 1`] = `
[
  [
    "warning",
    "end tag name contains invalid trailing characters: "a bogus"",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_ElementTypeMatch_QName_HtmlTrailingRecover with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "warning: end tag name contains invalid trailing characters: "a bogus"
    at warning (lib/sax.js:#8)",
]
`;

exports[`WF_ElementTypeMatch_QName_HtmlTrailingRecover with mimeType text/xml should not be reported: caught 1`] = `[ParseError: end tag name contains invalid characters: "a bogus"]`;

exports[`WF_ElementTypeMatch_QName_HtmlTrailingRecover with mimeType text/xml should not be reported: reported 1`] = `
[
  [
    "fatalError",
    "end tag name contains invalid characters: "a bogus"",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_ElementTypeMatch_QName_XmlLineBreakRecover with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "warning",
    "end tag name contains invalid trailing characters: "a
bogus"",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_ElementTypeMatch_QName_XmlLineBreakRecover with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "end tag name is followed by a line break and trailing content: "a
bogus"",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_ElementTypeMatch_QName_XmlLineBreakRecover with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: end tag name is followed by a line break and trailing content: "a||bogus"
    at error (lib/sax.js:#9)",
]
`;

exports[`WF_ElementTypeMatch_UnclosedXmlTag with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_ElementTypeMatch_UnclosedXmlTag_IncompleteStartTag with mimeType text/html should not be reported: reported 1`] = `
[
  [
    "error",
    "unexpected end of input",
    {
      "columnNumber": 1,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_Entity_ReferenceProduction with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "entity not matching Reference production: &1;",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_Entity_ReferenceProduction with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not matching Reference production: &1;
    at error (lib/sax.js:#2)",
]
`;

exports[`WF_Entity_ReferenceProduction with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "entity not matching Reference production: &1;",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_Entity_ReferenceProduction with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not matching Reference production: &1;
    at error (lib/sax.js:#2)",
]
`;

exports[`WF_Entity_ReferenceProduction_Attr with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "entity not matching Reference production: &1;",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_Entity_ReferenceProduction_Attr with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not matching Reference production: &1;
    at error (lib/sax.js:#2)",
]
`;

exports[`WF_Entity_ReferenceProduction_Attr with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "entity not matching Reference production: &1;",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_Entity_ReferenceProduction_Attr with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not matching Reference production: &1;
    at error (lib/sax.js:#2)",
]
`;

exports[`WF_Entity_ReferenceProduction_Script with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_Entity_ReferenceProduction_Script with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "entity not matching Reference production: &1;",
    {
      "columnNumber": 9,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_Entity_ReferenceProduction_Script with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not matching Reference production: &1;
    at error (lib/sax.js:#2)",
]
`;

exports[`WF_EntityDeclared with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "entity not found:&e;",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityDeclared with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not found:&e;
    at error (lib/sax.js:#3)",
]
`;

exports[`WF_EntityDeclared with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "entity not found:&e;",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityDeclared with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not found:&e;
    at error (lib/sax.js:#3)",
]
`;

exports[`WF_EntityDeclared_Attr with mimeType text/html should be reported 1`] = `
[
  [
    "error",
    "entity not found:&e;",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityDeclared_Attr with mimeType text/html should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not found:&e;
    at error (lib/sax.js:#3)",
]
`;

exports[`WF_EntityDeclared_Attr with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "entity not found:&e;",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityDeclared_Attr with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not found:&e;
    at error (lib/sax.js:#3)",
]
`;

exports[`WF_EntityDeclared_Script with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_EntityDeclared_Script with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "entity not found:&e;",
    {
      "columnNumber": 9,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityDeclared_Script with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: entity not found:&e;
    at error (lib/sax.js:#3)",
]
`;

exports[`WF_EntityRef with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_EntityRef with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "EntityRef: expecting ;",
    {
      "columnNumber": 6,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityRef with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: EntityRef: expecting ;
    at error (lib/sax.js:#1)",
]
`;

exports[`WF_EntityRef_Attr with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_EntityRef_Attr with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "EntityRef: expecting ;",
    {
      "columnNumber": 11,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityRef_Attr with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: EntityRef: expecting ;
    at error (lib/sax.js:#1)",
]
`;

exports[`WF_EntityRef_Script with mimeType text/html should not be reported: reported 1`] = `[]`;

exports[`WF_EntityRef_Script with mimeType text/xml should be reported 1`] = `
[
  [
    "error",
    "EntityRef: expecting ;",
    {
      "columnNumber": 9,
      "lineNumber": 1,
    },
  ],
]
`;

exports[`WF_EntityRef_Script with mimeType text/xml should escalate Error thrown in onError to ParseError 1`] = `
[
  "error: EntityRef: expecting ;
    at error (lib/sax.js:#1)",
]
`;
